--- a/index.css
+++ b/index.css
@@ -64,3 +64,12 @@ body {
     transform: translateY(-10px) skewX(-10deg);
     box-shadow: 0 0 20px;
 }
+
+.btn:hover p {
+    transform: translateY(-10px) skewX(0deg);
+}
+
+.btn:hover::after {
+    transform: translateY(10px) translateX(-30px) skew(-10deg);
+    opacity: 0.2;
+}
